# lean-kernel-checker

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
glue/: Glue.lean  nat_bytes.c
sokonanoda/: Cargo.toml
sokonanoda/src/: builder.rs  lib.rs  util.rs
sokonanoda/src/tests/: util.rs
src/: eval.rs  extract.rs  ffi.rs  main.rs  util.rs
