[workspace]
# `lean-checker` (this package) is the workspace root; `sokonanoda` is an
# imported member (a Lean 4 type checker / kernel with NbE, imported with full
# history via `git subtree`).
members = ["sokonanoda"]

[package]
name = "lean-checker"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
# Clap-compatible, modernized argument parser.
palc = "0.0.2"
# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Raw FFI bindings to the Lean 4 runtime. We link the *shared* `libleanshared`
# rather than the static libraries (the `static` default feature), which is what
# the Nix `lean4` package ships.
lean-sys = { version = "0.0.9", default-features = false }
# The kernel/type-checker we feed via FFI.
sokonanoda = { path = "sokonanoda" }
# Arbitrary-precision Nat literals (matches sokonanoda's num-bigint).
num-bigint = "0.4"
rayon = "1.12.0"
indicatif = { version = "0.18.4", features = ["rayon"] }

[build-dependencies]
cc = "1.2.65"

# Workspace-wide release profile (profiles are honoured only at the root).
# Thin LTO complements the `-flto=thin` applied to the C glue in build.rs.
[profile.release]
lto = "thin"
